added valume information of publication

--- a/publication.qmd
+++ b/publication.qmd
@@ -19,9 +19,9 @@ title: ""
 ### 2024
 
 2.  Soe, N. C., Yohannes, Y. B., **Ohigashi, T.**, Nakata, H., Tatsumi, C., Uchida, Y., Mufalo, W., Ito, M., Sato, T., Igarashi, T., Ikenaka, Y., Ishizuka, M., & Nakayama, S. M. M.\* (2024)\
-    "Effect of chicken manure amendment on lead burden in mice: Exposure to lead-spiked soil" <a href="https://doi.org/10.1007/s11368-024-03769-y" target="_blank"><br>*Journal of Soils and Sediments*</a>
+    "Effect of chicken manure amendment on lead burden in mice: Exposure to lead-spiked soil" <a href="https://doi.org/10.1007/s11368-024-03769-y" target="_blank"><br>*Journal of Soils and Sediments*, 24, 2001–2011</a>
 
 ### 2021
 
 1.  **Ohigashi, T.**, Schloter, M., Schulz, S., Munthali, K., & Uchida, Y.\* (2021)\
-    "Changes in soil prokaryotic diversity in response to land-use changes in sub-Saharan Africa" <a href="https://doi.org/10.3390/soilsystems5040062" target="_blank"><br>*Soil Systems*, 5(4), 62.</a>
+    "Changes in soil prokaryotic diversity in response to land-use changes in sub-Saharan Africa" <a href="https://doi.org/10.3390/soilsystems5040062" target="_blank"><br>*Soil Systems*, 5(4), 62</a>
