changed profile pic

--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Takamitsu OHIGASHI, 大東孝充"
 ---
 
-<img src="profile_pic.png" width="250"/>
+<img src="profile_pic2.jpg" width="300"/>
 
 ## Profile
 
