--- a/index.qmd
+++ b/index.qmd
@@ -2,9 +2,9 @@
 title: "Takamitsu OHIGASHI, 大東孝充"
 ---
 
-<div style="text-align: center;">
-  <img src="profile_pic2.jpg" width="300"/>
-</div>
+::: {style="text-align: center;"}
+<img src="profile_pic2.jpg" width="300"/>
+:::
 
 ## Profile
 
