--- a/index_jp.qmd
+++ b/index_jp.qmd
@@ -23,10 +23,9 @@ title: "大東 孝充"
 
 ## 経歴
 
--   1996年 大阪府生まれ兵庫県西宮市育ち
--   2015 \~ 2019年 北海道大学農学部
--   2019 \~ 2021年 修士課程, 北海道大学国際食資源学院
--   2021 \~ 2024年 修士課程, 北海道大学国際食資源学院
--   2024年 博士（食資源学）, 北海道大学
--   2024年 \~ 現在 日本学術振興会特別研究員PD（近藤研）
-
+-   1996年: 大阪府生まれ兵庫県西宮市育ち
+-   2015 \~ 2019年: 北海道大学農学部
+-   2019 \~ 2021年: 修士課程, 北海道大学国際食資源学院
+-   2021 \~ 2024年: 博士課程, 北海道大学国際食資源学院
+-   2024年: 博士号（食資源学）取得, 北海道大学
+-   2024年 \~ 現在: 日本学術振興会特別研究員PD（近藤研）
